--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,9 @@
     display: -moz-box;
     -moz-box-orient: vertical;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    line-clamp: 3;
+    line-clamp: 2;
     box-orient: vertical;
 }
 
@@ -20,4 +20,9 @@
     -webkit-box-orient: vertical;
     line-clamp: 1;
     box-orient: vertical;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
 }
